# telegram-trivia-chatbot

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  temp.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: deploy.yaml
src/: bot.py  models.py  trivia.py
